documents/Nautilus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egl
  template:
    metadata:
      labels:
        app: egl
    spec:
      hostname: egl
      tolerations:
      - effect: NoSchedule
        key: nautilus.io/hardware
        operator: Exists
#      hostNetwork: true
      containers:
      - name: egl
        image: gitlab-registry.nrp-nautilus.io/nrp/u55c-desktop:latest
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 128Gi
            cpu: "32"
            amd.com/xilinx_u55c_gen3x16_xdma_base_3-0: 1
#            nvidia.com/gpu: 1
          requests:
            memory: 128Gi
            cpu: "32"
            amd.com/xilinx_u55c_gen3x16_xdma_base_3-0: 1
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: egl-cache-vol
        - mountPath: /home/user
          name: root-vol
#        - mountPath: /home/user/shared
#          name: shared-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: egl-cache-vol
        emptyDir: {}
      - name: shared-vol
#        persistentVolumeClaim:
#          claimName: sharedvol
      - name: root-vol
        persistentVolumeClaim:
          claimName: homevol
